--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,15 @@
 !.yarn/releases
 !.yarn/versions
 
+
+# Ignore node_modules
+frontend/node_modules/
+backend/node_modules/
+
+# Ignore .env files
+frontend/.env
+backend/.env
+
 # testing
 /coverage
 
