--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.23.4",
+    "axios": "^1.7.9",
+    "bwip-js": "^4.5.1",
+    "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
+    "next": "15.1.6",
+    "rc-picker": "^4.9.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "react-csv": "^2.2.2",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-next": "15.1.6"
   }
 }
