--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "antd": "^5.23.4",
+    "@ant-design/icons": "^5.6.1",
+    "antd": "^5.24.4",
     "axios": "^1.7.9",
     "bwip-js": "^4.5.1",
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
+    "lodash.debounce": "^4.0.8",
+    "moment": "^2.30.1",
     "next": "15.1.6",
     "rc-picker": "^4.9.2",
     "react": "^19.0.0",
@@ -21,8 +24,11 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
     "@eslint/eslintrc": "^3",
+    "babel-loader": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.6"
   }
 }
+
